🎀 Fix schedule nav z-index

--- a/src/pretalx/static/agenda/scss/_agenda.scss
+++ b/src/pretalx/static/agenda/scss/_agenda.scss
@@ -49,6 +49,7 @@ header {
   display: flex;
   flex-direction: row;
   align-content: space-between;
+  z-index: 1000;
 
   a {
     font-size: 16px;
